Add and update some config files

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,13 @@
   "overrides": [
     {
       "files": ["**/*.svelte"],
-      "processor": "svelte3/svelte3"
+      "processor": "svelte3/svelte3",
+      "rules": {
+        "import/first": 0,
+        "import/no-mutable-exports": 0,
+        "import/prefer-default-export": 0,
+        "svelte3/ignore-styles": 0
+      }
     }
   ],
   "rules": {
