--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rm -rf ./dist/*",
     "reinstall": "rm -rf 'yarn.lock' 'node_modules' && yarn",
-    "start": "NODE_ENV=development webpack-dev-server --mode development --color --compress --open",
+    "start": "NODE_ENV=development webpack-dev-server --mode development",
     "build": "yarn clean && NODE_ENV=production webpack --mode production"
   },
   "engines": {
@@ -41,17 +41,20 @@
     "husky": "^4.3.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "lint-staged": "^10.5.1",
-    "mini-css-extract-plugin": "0.12.0",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
+    "postcss-load-config": "^3.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-modules": "^4.0.0",
     "postcss-nested": "^5.0.1",
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.7.2",
+    "stylelint": "^13.8.0",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-csstree-validator": "^1.9.0",
