--- a/.eslintrc
+++ b/.eslintrc
@@ -82,7 +82,7 @@
     "no-console": [
       "error",
       {
-        "allow": ["info", "log", "assert"]
+        "allow": ["info", "log", "assert", "dir"]
       }
     ],
     // This rule aims to reduce the scrolling required when reading through your code. It will warn when the maximum amount of empty lines has been exceeded.
